# Level-4-Project-PyFunc

./: .gitignore  Project Proposal.md  README.md  plan.md  timelog.md  timelog.rmd
dissertation/: ._wordcount_selection.tex  .gitignore  l4proj.bib  l4proj.cls  l4proj.tex
meetings/: 19-09-23.md  22-09-23.md  29-09-23.md  6-10-23.md
src/: Pyfunc_grammar_spec.md
src/Hindley_Milner/: dune-project  run  test_file.pyf
src/Hindley_Milner/lib/[LEGACY]simply_typed/: typechecker.ml
src/Hindley_Milner/lib/common/: lambda_sig.ml  primative_types.ml
src/Hindley_Milner/lib/frontend/: dune  lexer.mll  parser.mly
src/Hindley_Milner/lib/hindley_milner/: ast.ml  constraint.ml  constructors.ml  dune  errors.ml  hm_rules.ml  hm_type.ml  inference.ml  typechecker.ml  types.ml
src/Hindley_Milner/lib/interpreter/: dune  errors.ml  interpreter.ml
src/Hindley_Milner/lib/ir_parser/: dune  parse.ml
src/Hindley_Milner/lib/ir_phase/: dune  ir_lexer.mll  ir_parser.mly
src/Hindley_Milner/lib/ir_phase/hindley_milner/: ast.ml  constructors.ml  typechecker.ml
src/Hindley_Milner/lib/lambda/: dune  lambda_sig.ml  primitive_types.ml
src/Hindley_Milner/lib/parser/: dune  lexer.mll  parse.ml  parser.mly  tokens.mly
src/Hindley_Milner/lib/pyfunc_frontend/: ast.ml  dune  frontend.ml  lexer.mll  parse.ml  parser.mly  py_ast.ml  py_lexer.mll  py_parser.mly
src/Hindley_Milner/lib/simply_typed/: constructors.ml  errors.ml  typechecker.ml  types.ml
src/Hindley_Milner/test/: CPython-tests.txt  dune  program_prompts.txt
src/PyFunc/: .gitignore  build  run_test_file  run_test_file_verbose  test_file.pyf
src/PyFunc/lib/: dune
src/PyFunc/lib/[LEGACY]simply_typed/: dune
src/PyFunc/lib/interpreter/: interpreter.ml
src/PyFunc/lib/ir_phase/: ir_parser.mly  parse.ml
src/PyFunc/lib/ir_phase/hindley_milner/: ast.ml  dune
src/PyFunc/lib/pyfunc_frontend/: dune  frontend.ml  py_ast.ml  py_lexer.mll  py_parser.mly
src/PyFunc/test/: program_prompts.txt
src/python_prototype/: main.py  scanner.py
status-report/: status_report.tex
