(lang dune 3.11)

(name Hindley_Milner)

(generate_opam_files true)

(source
 (github Max-Wraith-Whiting/Level-4-Individual-Project))

(authors "Max Wraith-Whiting")

(maintainers "Max Wraith-Whiting")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name Hindley_Milner)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
