(lang dune 3.11)

(name pyfunc)

(generate_opam_files true)

(source
 (github Max-Wraith-Whiting/Level-4-Individual-Project))

(authors "Max Wraith-Whiting")

(maintainers "Max Wraith-Whiting")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name pyfunc)
 (synopsis "A plain english expression-based impure functional programming language.")
 (description "A plain english expression-based impure functional programming language.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
